<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Left Side -->
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_rides"
        android:icon="@drawable/ic_rides"
        android:title="@string/nav_rides" />

    <!-- Placeholder for FAB (This creates the gap in the middle) -->
    <item
        android:id="@+id/nav_placeholder"
        android:title=""
        android:enabled="false" />

    <!-- Right Side -->
    <item
        android:id="@+id/nav_wallet"
        android:icon="@drawable/ic_wallet"
        android:title="@string/nav_wallet" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>